use router and group urls
