# endpoints.js
@@ -3,7 +3,9 @@ import express from "express";
 import userRouter from "./router/userRouter.js";
 import googleRouter from "./router/googleRouter.js";
 
-const app = express();
+const router = express.Router();
 
-app.use('/user', userRouter);
-app.use('/google', googleRouter);
+router.use('/user', userRouter);
+router.use('/google', googleRouter);
+
+export default router;
